--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -27,12 +27,8 @@
     }
 
     &-config {
-        .notification-menu {
-            height: 3.125rem; // 50px
-            width: 100%;
-            cursor: pointer;
-                padding: 0.5rem 0 0.5rem 1.25rem; // 8px 0 8px 20px
-            .notification-num {
+        .notification {
+            &-count {
                 margin: 0.3125rem 1rem; // 5px 16px
                 padding: 0.125rem 0.625rem; // 2px 10px
                 border-radius: 1.25rem; // 20px
@@ -50,13 +46,10 @@
                 .notification-bell {
                     fill: $white;
                 }
-                .notification-num {
+                .notification-count {
                     color: $white;
                     background-color: $point-blue;
                 }
-            }
-            &:hover {
-                background: $menu-bg-hover;
             }
         }
         .user-info-menu {
@@ -92,9 +85,6 @@
                     margin-right: 1.25rem; //20px
                 }
             }
-            &:hover {
-                background: $menu-bg-hover;
-            }
         }
         .logout-menu {
             height: 3.125rem; // 50px
@@ -119,9 +109,9 @@
                     margin-right: 1rem; // 16px
                 }
             }
-            &:hover {
-                background: $menu-bg-hover;
-            }
+        }
+        & > div:hover {
+            background: $menu-bg-hover;
         }
     }
 }
@@ -131,6 +121,7 @@
     height: $logo-height;
     background-color: $menu-bg-color;
     position: fixed;
+    z-index: 1000;
     padding: 15px 20px 15px 20px;; // 15px 20px 15px 20px;
 }
 
@@ -141,7 +132,7 @@
     position: relative;
     left: 0;
     top: $logo-height;
-    z-index: 999;
+    z-index: 1000;
     overflow: auto;
     .right {
         right: 0.375rem // 6px
