select box 디자인 적용 - MR 응대
- 색상등 변수값 정의
- 프로세스 디자이너 : 담당자 항목 추가시 select box 반영
- 폼 디자이너 : 드로잉영역 dropdown 컴포넌트 적용

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1687,6 +1687,7 @@ select:disabled {
   position: relative;
   font-size: 1rem;
   height: 2.5rem;
+  width: 100%;
 }
 
 .designed-select {
@@ -1736,6 +1737,9 @@ select:disabled {
 .designed-select.active:after {
   top: 0.5625rem;
   background: url("../media/icons/icon_arrow_up.svg") no-repeat center left;
+}
+.designed-select.active + .designed-options {
+  display: block;
 }
 .designed-select.disabled-select {
   color: #ACB4BF;
