--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -388,3 +388,5 @@ $tooltip-contents-border:                    0.125rem; // 2px
 $tooltip-contents-padding:                   1.0625rem 0.9375rem 0.9375rem 0.9375rem; // 17px 15px 15px 15px
 $tooltip-contents-box-shadow:                0 0 0.3125rem 0 rgba(30, 47, 63, 0.2); // 5px
 
+/////////////////////////////// designed select ///////////////////////////////
+$select-bg-color: rgba(0, 152, 255, 0.08);
