--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-list-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-list-edit.scss
@@ -41,7 +41,7 @@
                 text-indent: 0.625rem; // 10px
                 height: 2.5rem; // 40px
                 &:hover {
-                    background: rgba(0, 152, 255, 0.08); // TODO: 변수로 따로 빼야 하나?
+                    background: $select-bg-color;
                 }
                 &[rel="hide"] {
                     display: none;
@@ -59,7 +59,7 @@
                 padding: 0.5rem 0.625rem; // 8px 10px
                 li {
                     color: $dark-gray;
-                    font-weight: 400;
+                    font-weight: $font-weight-regular;
                     height: 1.5rem; // 24px
                 }
             }
