--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -789,7 +789,6 @@ select:disabled {
   position: relative;
   font-size: 1rem;
   height: 2.5rem;
-  width: 100%;
 }
 
 .designed-select {
@@ -1104,6 +1103,10 @@ table tr td, table tr th {
   text-align: center;
   vertical-align: middle;
   border-color: #EBEBEB;
+}
+
+.select {
+  width: 100%;
 }
 
 /* _buttons.scss 
