--- a/src/main/resources/public/template/notification/notificationList.html
+++ b/src/main/resources/public/template/notification/notificationList.html
@@ -8,30 +8,28 @@
         <span class="close" onclick="toggleNotificationContainer();"></span>
     </div>
     <div class="notification-body scroll-wrap">
-        <div class="notification nodata" th:if="${#arrays.isEmpty(notificationList)}" >
+        <div class="nodata" th:if="${#arrays.isEmpty(notificationList)}">
             <span th:text="#{notification.msg.noNotificationData}"></span>
         </div>
-        <div>
-            <div class="notification notification-content" th:unless="${#arrays.isEmpty(notificationList)}"
-                 th:each="notification: ${notificationList}"
-                 th:id="${notification.notificationId}" th:attr="instance-id=${notification.instanceId}"
-                 th:attrappend="is-confirm=${notification.confirmYn}" th:attrprepend="is-display=${notification.displayYn}"
-                 th:classappend="${notification.confirmYn} ? confirm">
-                <div class="title">
-                    <label class="notification-label"><input type="checkbox" th:checked="${notification.confirmYn}"
-                                  th:onclick="updateNotification([[${notification.notificationId}]], 'confirm')"
-                                  th:disabled="${notification.confirmYn}"/></label>
-                    <span class="title text-ellipsis" th:text="${notification.title}" th:classappend="${notification.confirmYn} ? confirm"
-                        th:onclick="openTokenPage([[${notification.notificationId}]], [[${notification.instanceId}]])"></span>
-                    <button class="remove" th:onclick="deleteNotification([[${notification.notificationId}]])"></button>
-                </div>
-                <div class="message">
-                    <span class="message text-ellipsis" th:text="${notification.message}"></span>
-                </div>
-                <div class="date">
-                    <span class="date" th:text="${#temporals.format(notification.createDt, dateformat)}"
-                          th:with="dateformat=${#authentication.details.timeFormat}"></span>
-                </div>
+        <div class="notification-content" th:unless="${#arrays.isEmpty(notificationList)}"
+             th:each="notification: ${notificationList}"
+             th:id="${notification.notificationId}" th:attr="instance-id=${notification.instanceId}"
+             th:attrappend="is-confirm=${notification.confirmYn}" th:attrprepend="is-display=${notification.displayYn}"
+             th:classappend="${notification.confirmYn} ? confirm">
+            <div class="title">
+                <label class="notification-checked"><input type="checkbox" th:checked="${notification.confirmYn}"
+                              th:onclick="updateNotification([[${notification.notificationId}]], 'confirm')"
+                              th:disabled="${notification.confirmYn}"/></label>
+                <span class="title text-ellipsis" th:text="${notification.title}" th:classappend="${notification.confirmYn} ? confirm"
+                    th:onclick="openTokenPage([[${notification.notificationId}]], [[${notification.instanceId}]])"></span>
+                <button class="btn-remove" th:onclick="deleteNotification([[${notification.notificationId}]])"></button>
+            </div>
+            <div class="message">
+                <span class="message text-ellipsis" th:text="${notification.message}"></span>
+            </div>
+            <div class="date">
+                <span class="date" th:text="${#temporals.format(notification.createDt, dateformat)}"
+                      th:with="dateformat=${#authentication.details.timeFormat}"></span>
             </div>
         </div>
     </div>
