--- a/src/main/resources/public/src/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/src/scss/theme/default/_notification.scss
@@ -5,7 +5,6 @@
     padding: 0.6875rem 0 0.6875rem 1.3125rem; // 11px 0 11px 21px
     position: relative;
     display: inline-block;
-    cursor: pointer;
     img, button {
         margin: 0;
         border: none;
@@ -58,95 +57,87 @@
     }
     &-body {
         overflow: auto;
+        min-height: 6.875rem; // 110px
         max-height: 20.63rem; // 330px
-        button {
-            float: right;
-            &.remove {
-                padding: 0;
-                @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.125rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 18px 20px
-            }
-        }
-        span.title:hover {
-            text-decoration: underline;
-            cursor: pointer;
-        }
-        .notification {
-            height: 6.875rem; // 110px
-            border-bottom: 0.063rem solid $line-gray; // 1px
-            padding: 0.938rem;// 15px
-            &.nodata {
-                border: none;
-            }
+        .nodata {
+            padding: 0.938rem; // 15px
         }
     }
     &-content {
+        height: 6.875rem; // 110px
+        padding: 0.938rem;// 15px
+        border-bottom: 0.063rem solid $line-gray; // 1px
         &:hover {
             background-color: rgba(135, 206, 255, 0.1);
         }
-        div {
-            .notification-label {
-                display: flex;
-                float: left;
-                background-color: $white;
+        .notification-checked {
+            display: flex;
+            float: left;
+            background-color: $white;
+            margin: 0;
+            input[type="checkbox"] {
+                width: 1.125rem; // 18px
+                height: 1.125rem; // 18px
+                -webkit-appearance: none;
+                border: 0.063rem solid $point-blue; // 1px
+                padding: 0.313rem; // 5px
+                border-radius: 0.063rem; // 1px
+                display: inline-block;
+                position: relative;
                 margin: 0;
-                input[type="checkbox"] {
-                    width: 1.125rem; // 18px
-                    height: 1.125rem; // 18px
-                    -webkit-appearance: none;
-                    border: 0.063rem solid $point-blue; // 1px
-                    padding: 0.313rem; // 5px
-                    border-radius: 0.063rem; // 1px
-                    display: inline-block;
-                    position: relative;
-                    margin: 0;
-                    cursor: pointer;
-                    &:checked {
-                        border: 0.063rem solid $line-gray; // 1px
-                        color: $pressed-gray;
-                        cursor: unset;
-                    }
-                    &:checked::after {
-                        content: '\2714'; // 체크 박스
-                        font-size: 1rem; // 16px
-                        position: absolute;
-                        top: -0.063rem; // -1px
-                        left: 0.063rem; // 1px
-                        color: $pressed-gray;
-                    }
+                cursor: pointer;
+                &:checked {
+                    border: 0.063rem solid $line-gray; // 1px
+                    color: $pressed-gray;
+                    cursor: unset;
                 }
-            }
-            span {
-                &.title {
-                    font-weight: $font-weight-medium;
+                &:checked::after {
+                    content: '\2714'; // 체크 박스
                     font-size: 1rem; // 16px
-                    line-height: 1.2;
-                    color: $light-black;
-                    max-width: 18.13rem; // 290px
-                }
-                &.message {
-                    font-weight: $font-weight-regular;
-                    font-size: 1rem; // 16px
-                    color: $dark-gray;
-                    max-width: 22.5rem; // 360px
-                    min-height: 2.5rem; // 40px
-                }
-                &.date {
-                    font-weight: $font-weight-regular;
-                    font-size: 0.875rem; // 14px
-                    color: $gray;
+                    position: absolute;
+                    top: -0.063rem; // -1px
+                    left: 0.063rem; // 1px
+                    color: $pressed-gray;
                 }
             }
         }
-        &.confirm {
-            div {
-                span {
-                    &.title {
-                        opacity: 0.75;
-                    }
-                    &.message {
-                        color: $gray;
-                    }
+        .btn-remove {
+            float: right;
+            padding: 0;
+            @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.125rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 18px 20px
+        }
+        span {
+            &.title {
+                font-weight: $font-weight-medium;
+                font-size: 1rem; // 16px
+                line-height: 1.2;
+                color: $light-black;
+                max-width: 18.13rem; // 290px
+                margin-left: 0.625rem; // 10px
+                &.confirm {
+                    opacity: 0.75;
                 }
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+            &.message {
+                font-weight: $font-weight-regular;
+                font-size: 1rem; // 16px
+                display: block;
+                color: $dark-gray;
+                max-width: 22.5rem; // 360px
+                min-height: 2.5rem; // 40px
+                margin-left: 1.75rem; // 28px
+                &.confirm {
+                    color: $gray;
+                }
+            }
+            &.date {
+                font-weight: $font-weight-regular;
+                font-size: 0.875rem; // 14px
+                color: $gray;
+                margin-left: 1.75rem; // 28px
             }
         }
     }
