--- a/src/main/resources/public/template/form/fragments/formHead.html
+++ b/src/main/resources/public/template/form/fragments/formHead.html
@@ -12,6 +12,7 @@
     <script th:src="@{/assets/js/util/i18n-alice.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/util/util-alice.js}"></script>
+    <script th:src="@{/assets/js/util/modal-alice.js}"></script>
     <script th:src="@{/assets/vendors/gModal/js/gModal.js}"></script>
     <script th:src="@{/assets/js/util/datetimepicker-alice.js}"></script>
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
