#9249 [기본 SCSS] portal.scss : 리뷰 후 수정 사항 반영

--- a/src/main/resources/public/src/scss/portal/_login.scss
+++ b/src/main/resources/public/src/scss/portal/_login.scss
@@ -72,5 +72,12 @@
     margin-top: 6.188rem; // 99px
 
     a { color: $login-form-font-color; }
+
+    &-signUp, 
+    &-findPwd,
+    &-findId {
+      flex: 1 0 auto;
+      text-align: center;
+    }
   }
 }
