--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -228,7 +228,6 @@ input, button, select, optgroup, textarea {
 }
 
 .required {
-  padding-left: 0.3125rem;
   font-weight: 700;
 }
 
@@ -2109,9 +2108,9 @@ button.ghost-line:disabled .icon {
 }
 
 .login-return {
-  position: absolute;
+  position: relative;
   top: 5rem;
-  left: 66rem;
+  right: 5rem;
   color: #ffffff;
   border-color: #ffffff;
   padding: 0.75rem 3rem;
@@ -3777,6 +3776,11 @@ button.ghost-line:disabled .icon {
 
 .login-other a {
   color: #586872;
+}
+
+.login-other-signUp, .login-other-findPwd, .login-other-findId {
+  flex: 1 0 auto;
+  text-align: center;
 }
 
 /*
