--- a/src/main/resources/public/src/scss/portal/_buttons.scss
+++ b/src/main/resources/public/src/scss/portal/_buttons.scss
@@ -2,9 +2,9 @@
 
 // 되돌아가기
 .login-return {
-  position: absolute;
+  position: relative;
   top: 5rem; // 80px
-  left: 66rem; // 1056px
+  right: 5rem; // 80px
   color: $white;
   border-color: $white;
   padding: 0.75rem 3rem; // 12px 48px
