--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -25,7 +25,10 @@
                     <div class="signup-base-form flex-column">
                         <input type="hidden" id="avatarUUID" name="avatarUUID" value=""/>
                         <div>
-                            <label class="required" th:text="#{user.label.id}"></label>
+                            <label>
+                                <span th:text="#{user.label.id}"></span>
+                                <span class="required"></span>
+                            </label>
                             <div class="help-tooltip">
                                 <span class="help-tooltip-icon"></span>
                                 <div class="tooltip-contents">
@@ -35,7 +38,10 @@
                         </div>
                         <input type="text" id="userId" name="userId" maxlength="100" required="required">
                         <div>
-                            <label class="required" href="#password-guide" tabindex="-1" th:text="#{user.label.password}"></label>
+                            <label href="#password-guide" tabindex="-1">
+                                <span th:text="#{user.label.password}"></span>
+                                <span class="required"></span>
+                            </label>
                             <div class="help-tooltip">
                                 <span class="help-tooltip-icon"></span>
                                 <div class="tooltip-contents">
@@ -44,11 +50,20 @@
                             </div>
                         </div>
                         <input type="password" id="password" name="password" maxlength="100" required="required">
-                        <label class="required" href="#password-guide" tabindex="-1" th:text="#{user.label.rePassword}"></label>
+                        <label href="#password-guide" tabindex="-1">
+                            <span th:text="#{user.label.rePassword}"></span>
+                            <span class="required"></span>
+                        </label>
                         <input type="password" id="rePassword" name="rePassword" maxlength="100" required="required">
-                        <label class="required" th:text="#{user.label.name}"></label>
+                        <label>
+                            <span th:text="#{user.label.name}"></span>
+                            <span class="required"></span>
+                        </label>
                         <input type="text" id="userName" name="userName" maxlength="100" required="required">
-                        <label class="required" th:text="#{user.label.email}"></label>
+                        <label>
+                            <span th:text="#{user.label.email}"></span>
+                            <span class="required"></span>
+                        </label>
                         <input type="text" id="email" name="email" maxlength="100" required="required">
                         <label th:text="#{user.label.mobileNumber}"></label>
                         <input type="text" id="mobileNumber" name="mobileNumber" maxlength="100">
