--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -12,7 +12,7 @@
     <div class="portal-container flex-row">
         <div class="login-background">
             <img class="login-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
-            <a href="/portal/portalMain" class="btn login-return" th:text="#{common.btn.return}"></a>
+            <a href="/portal/portalMain" class="btn login-return float-right" th:text="#{common.btn.return}"></a>
             <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
         </div>
         <div class="login-form">
