--- a/src/main/resources/public/src/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/src/scss/theme/default/_notification.scss
@@ -1,211 +1,207 @@
 // GNB notification
 .notification {
-    width: 100%;
-    height: 3.125rem; // 50px
-    padding: 0.6875rem 0 0.6875rem 1.3125rem; // 11px 0 11px 21px
-    position: relative;
-    display: inline-block;
-    img, button {
+  width: 100%;
+  height: 3.125rem; // 50px
+  padding: 0.6875rem 0 0.6875rem 1.3125rem; // 11px 0 11px 21px
+  position: relative;
+  display: inline-block;
+  img, button {
+    margin: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  &-container {
+    position: absolute;
+    width: 26.25rem; // 420px
+    bottom: 0;
+    left: calc(#{$nav-width} + 0.3125rem); // 좌측 간격 5px
+    color: $light-black;
+    background-color: $white;
+    display: none;
+    border: 0.0625rem solid $line-gray; // 1px
+    box-shadow: 0 0 0.3125rem 0 $line-gray; // 5px
+    &.on {
+    display: block;
+    }
+  }
+  &-header {
+    height: 2.5rem; // 40px
+    display: flex;
+    align-items: baseline;
+    background-color: $point-blue;
+    padding: 0 0.938rem; // 0 15px
+    span {
+      display: inline-block;
+      font-size: 0.875rem; // 14px
+      font-weight: $font-weight-regular;
+      color: $white;
+      &.title { // 알림 문구
+        font-size: 1rem; // 16px
+        font-weight: $font-weight-medium;
+      }
+      &.total {
+        margin: auto 0.3125rem; //5px
+      }
+      &.message {
+        margin-left: 0.625rem; // 10px
+      }
+      &.close { // X 버튼
+        width: 0.875rem; //14px
+        height: 0.875rem;
+        float: right;
+        margin-left: auto;
+        @include maskImage('#{$icon-folder-path}icon_close.svg', 0.875rem, 0.875rem, no-repeat, center, null, $white); // 14px
+      }
+    }
+  }
+  &-body {
+    overflow: auto;
+    min-height: 6.875rem; // 110px
+    max-height: 20.63rem; // 330px
+    .nodata {
+    padding: 0.938rem; // 15px
+    }
+  }
+  &-content {
+    height: 6.875rem; // 110px
+    padding: 0.938rem;// 15px
+    border-bottom: 0.063rem solid $line-gray; // 1px
+    &:hover {
+    background-color: rgba(135, 206, 255, 0.1);
+    }
+    .notification-checked {
+      display: flex;
+      float: left;
+      background-color: $white;
+      margin: 0;
+      input[type="checkbox"] {
+        width: 1.125rem; // 18px
+        height: 1.125rem; // 18px
+        -webkit-appearance: none;
+        border: 0.063rem solid $point-blue; // 1px
+        padding: 0.313rem; // 5px
+        border-radius: 0.063rem; // 1px
+        display: inline-block;
+        position: relative;
         margin: 0;
-        border: none;
-        background-color: transparent;
         cursor: pointer;
+        &:checked {
+          border: 0.063rem solid $line-gray; // 1px
+          color: $pressed-gray;
+          cursor: unset;
+        }
+        &:checked::after {
+          content: '\2714'; // 체크 박스
+          font-size: 1rem; // 16px
+          position: absolute;
+          top: -0.063rem; // -1px
+          left: 0.063rem; // 1px
+          color: $pressed-gray;
+        }
+      }
     }
-    &-container {
-        position: absolute;
-        width: 26.25rem; // 420px
-        bottom: 0;
-        left: calc(#{$nav-width} + 0.3125rem); // 좌측 간격 5px
+    .btn-remove {
+      float: right;
+      padding: 0;
+      @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.125rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 18px 20px
+    }
+    span {
+      &.title {
+        font-weight: $font-weight-medium;
+        font-size: 1rem; // 16px
+        line-height: 1.2;
         color: $light-black;
-        background-color: $white;
-        display: none;
-        border: 0.0625rem solid $line-gray; // 1px
-        box-shadow: 0 0 0.3125rem 0 $line-gray; // 5px
-        &.on {
-            display: block;
+        max-width: 18.13rem; // 290px
+        margin-left: 0.625rem; // 10px
+        &.confirm {
+          opacity: 0.75;
         }
-    }
-    &-header {
-        height: 2.5rem; // 40px
-        display: flex;
-        align-items: baseline;
-        background-color: $point-blue;
-        padding: 0 0.938rem; // 0 15px
-        span {
-            display: inline-block;
-            font-size: 0.875rem; // 14px
-            font-weight: $font-weight-regular;
-            color: $white;
-            &.title { // 알림 문구
-                font-size: 1rem; // 16px
-                font-weight: $font-weight-medium;
-            }
-            &.total {
-                margin: auto 0.3125rem; //5px
-            }
-            &.message {
-                margin-left: 0.625rem; // 10px
-            }
-            &.close { // X 버튼
-                width: 0.875rem; //14px
-                height: 0.875rem;
-                float: right;
-                margin-left: auto;
-                @include maskImage('#{$icon-folder-path}icon_close.svg', 0.875rem, 0.875rem, no-repeat, center, null, $white); // 14px
-            }
-        }
-    }
-    &-body {
-        overflow: auto;
-        min-height: 6.875rem; // 110px
-        max-height: 20.63rem; // 330px
-        .nodata {
-            padding: 0.938rem; // 15px
-        }
-    }
-    &-content {
-        height: 6.875rem; // 110px
-        padding: 0.938rem;// 15px
-        border-bottom: 0.063rem solid $line-gray; // 1px
         &:hover {
-            background-color: rgba(135, 206, 255, 0.1);
+          text-decoration: underline;
         }
-        .notification-checked {
-            display: flex;
-            float: left;
-            background-color: $white;
-            margin: 0;
-            input[type="checkbox"] {
-                width: 1.125rem; // 18px
-                height: 1.125rem; // 18px
-                -webkit-appearance: none;
-                border: 0.063rem solid $point-blue; // 1px
-                padding: 0.313rem; // 5px
-                border-radius: 0.063rem; // 1px
-                display: inline-block;
-                position: relative;
-                margin: 0;
-                cursor: pointer;
-                &:checked {
-                    border: 0.063rem solid $line-gray; // 1px
-                    color: $pressed-gray;
-                    cursor: unset;
-                }
-                &:checked::after {
-                    content: '\2714'; // 체크 박스
-                    font-size: 1rem; // 16px
-                    position: absolute;
-                    top: -0.063rem; // -1px
-                    left: 0.063rem; // 1px
-                    color: $pressed-gray;
-                }
-            }
+      }
+      &.message {
+        font-weight: $font-weight-regular;
+        font-size: 1rem; // 16px
+        display: block;
+        color: $dark-gray;
+        max-width: 22.5rem; // 360px
+        min-height: 2.5rem; // 40px
+        margin-left: 1.75rem; // 28px
+        &.confirm {
+            color: $gray;
         }
-        .btn-remove {
-            float: right;
-            padding: 0;
-            @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.125rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 18px 20px
-        }
-        span {
-            &.title {
-                font-weight: $font-weight-medium;
-                font-size: 1rem; // 16px
-                line-height: 1.2;
-                color: $light-black;
-                max-width: 18.13rem; // 290px
-                margin-left: 0.625rem; // 10px
-                &.confirm {
-                    opacity: 0.75;
-                }
-                &:hover {
-                    text-decoration: underline;
-                }
-            }
-            &.message {
-                font-weight: $font-weight-regular;
-                font-size: 1rem; // 16px
-                display: block;
-                color: $dark-gray;
-                max-width: 22.5rem; // 360px
-                min-height: 2.5rem; // 40px
-                margin-left: 1.75rem; // 28px
-                &.confirm {
-                    color: $gray;
-                }
-            }
-            &.date {
-                font-weight: $font-weight-regular;
-                font-size: 0.875rem; // 14px
-                color: $gray;
-                margin-left: 1.75rem; // 28px
-            }
-        }
+      }
+      &.date {
+        font-weight: $font-weight-regular;
+        font-size: 0.875rem; // 14px
+        color: $gray;
+        margin-left: 1.75rem; // 28px
+      }
     }
+  }
 }
 
 // 우측 하단 notification
 .alice-toastify {
-    height: 6.25rem; // 100px
-    padding: 0 !important;
-    background: $white !important;
-    box-shadow: 0 0 0.3125rem 0 $line-gray !important;
-    border-radius: 0.063rem !important; // 1px
-    &.toastify-right {
-        right: 0.625rem; // 10px
-    }
-    
-    &.toast-content {
-        div.icon {
-            float: left;
-            width: 6.25rem; // 100px
-            height: 6.25rem; // 100px
-            @include backgroundImageAndSize('#{$image-folder-path}notification/img_notification_logo.png', 6.25rem) // 100px
-        }
-        div.content {
-            float: left;
-            width: 23.13rem; // 370px
-            height: 100%;
-            padding: 0.938rem; // 15px
-            border: 0.0625rem solid $line-gray !important; // 1px
-            div {
-                &.title {
-                    padding-bottom: 0.625rem; // 10px
-                    label, button {
-                        display: none;
-                    }
-                }
-                &.message {
-                    padding-bottom: 0.625rem; // 10px
-                }
-                span {
-                    &.title {
-                        font-size: 1rem; // 16px
-                        font-weight: $font-weight-medium;
-                        color: $light-black;
-                        max-width: 18.13rem; // 290px
-                    }
-                    &.message {
-                        font-size: 1rem; // 16px
-                        font-weight: $font-weight-regular;
-                        color: $dark-gray;
-                        max-width: 22.5rem; // 360px
-                    }
-                    &.date {
-                        font-size: 0.875rem; // 14px
-                        font-weight: $font-weight-regular;
-                        color: $gray;
-                    }
-                }
+  height: 6.25rem; // 100px
+  padding: 0 !important;
+  background: $white !important;
+  box-shadow: 0 0 0.3125rem 0 $line-gray !important;
+  border-radius: 0.063rem !important; // 1px
+  &.toastify-right {
+    right: 0.625rem; // 10px
+  }
+  
+  &.toast-content {
+      .icon {
+        float: left;
+        width: 6.25rem; // 100px
+        height: 6.25rem; // 100px
+        @include backgroundImageAndSize('#{$image-folder-path}notification/img_notification_logo.png', 6.25rem) // 100px
+      }
+      .content {
+        float: left;
+        width: 23.13rem; // 370px
+        height: 100%;
+        padding: 0.938rem; // 15px
+        border: 0.0625rem solid $line-gray !important; // 1px
+        div {
+          &.title {
+            padding-bottom: 0.625rem; // 10px
+            label, button { display: none; }
+          }
+          &.message {
+            padding-bottom: 0.625rem; // 10px
+          }
+          span {
+            &.title {
+              font-size: 1rem; // 16px
+              font-weight: $font-weight-medium;
+              color: $light-black;
+              max-width: 18.13rem; // 290px
             }
+            &.message {
+              font-size: 1rem; // 16px
+              font-weight: $font-weight-regular;
+              color: $dark-gray;
+              max-width: 22.5rem; // 360px
+            }
+            &.date {
+              font-size: 0.875rem; // 14px
+              font-weight: $font-weight-regular;
+              color: $gray;
+            }
+          }
         }
-    }
-
-    .toast-close {
-        position: absolute;
-        padding: 0;
-        top: 0.688rem; // 11px
-        right: 0.688rem; // 11px
-        @include maskImage('#{$icon-folder-path}icon_close.svg', 0.875rem, 0.875rem, no-repeat, center, null, $pressed-gray); // 14px
-    }
+      }
+  }
+  .toast-close {
+    position: absolute;
+    padding: 0;
+    top: 0.688rem; // 11px
+    right: 0.688rem; // 11px
+    @include maskImage('#{$icon-folder-path}icon_close.svg', 0.875rem, 0.875rem, no-repeat, center, null, $pressed-gray); // 14px
+  }
 }
-
