--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -27,6 +27,7 @@
 @import "../../template/_text-editor.scss";
 @import '../../template/_tree.scss';
 @import '_color-picker.scss';
+@import '_modal.scss';
 @import '_thumbnail.scss';
 @import '_avatar.scss';
 @import '_tooltip.scss';
