--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3573,18 +3573,18 @@ button .icon-search {
   vertical-align: middle;
 }
 
-/* _thumbnail.scss 
+/* _modal.scss 
  *
- * 파일 경로 : template/_thumbnail.scss
- * @description 썸네일 디자인
- * @author jy.lim
+ * 파일 경로 : template/_modal.scss
+ * @description 모달 디자인
+ * @author wdj
  * @version 1.0
  */
-body.thumbnail-modal-active {
+body.modal-active {
   overflow: hidden !important;
 }
 
-.thumbnail-modal-wrapper {
+.modal-wrapper {
   position: fixed;
   top: 0;
   right: 0;
@@ -3595,54 +3595,65 @@ body.thumbnail-modal-active {
   z-index: 1;
 }
 
-.thumbnail-modal-wrapper.thumbnail-modal-active {
+.modal-wrapper.modal-active {
   display: block;
 }
 
-.thumbnail-modal-wrapper .thumbnail-modal-backdrop {
+.modal-wrapper .modal-backdrop {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: 2001;
-  background: rgba(116, 147, 179, 0.5);
+  background-color: rgba(116, 147, 179, 0.5);
 }
 
-.thumbnail-modal-wrapper .thumbnail-modal-dialog {
-  z-index: 2001;
+.modal-wrapper .modal-dialog {
   position: absolute;
   top: 4em;
   left: 0;
   right: 0;
-  width: 77.5rem;
+  width: 34.38rem;
   margin: 0 auto 2em auto;
   background-color: #ffffff;
-  box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
+  box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  border-radius: 0.0625rem;
+  z-index: 2001;
 }
 
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-title {
+.modal-wrapper .modal-dialog .modal-header {
   height: 3.375rem;
-  color: #3F4B56;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 500;
-  border-bottom: solid 0.0625rem #EBEBEB;
+  color: #3F4B56;
+  border-bottom: 0.0625rem solid #EBEBEB;
   padding: 1.125rem 0 0 1.25rem;
 }
 
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-body {
+.modal-wrapper .modal-dialog .modal-content {
+  height: calc(22.5rem - 3.375rem - 5rem);
+  border-bottom: 0.0625rem solid #EBEBEB;
   overflow: auto;
-  height: 40rem;
-  border-bottom: solid 0.0625rem #EBEBEB;
 }
 
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons {
+.modal-wrapper .modal-dialog .modal-bottom {
   height: 5rem;
-  display: flex;
-  float: right;
   padding: 1.25rem 1.25rem 1.25rem 0;
 }
 
+.modal-dialog.thumbnail-image {
+  width: 62.5rem;
+  height: 48.44rem;
+}
+
+/* _thumbnail.scss 
+ *
+ * 파일 경로 : template/_thumbnail.scss
+ * @description 썸네일 디자인
+ * @author jy.lim
+ * @version 1.0
+ */
 .thumbnail-container {
   font-family: "Noto Sans KR";
   overflow-y: auto;
