--- a/src/main/resources/public/src/scss/form/_modal.scss
+++ b/src/main/resources/public/src/scss/form/_modal.scss
@@ -1,1 +1,9 @@
 @import '../template/_modal.scss';
+
+// 썸네일
+.modal-dialog {
+  &.thumbnail-image {
+    width: $thumbnail-modal-dialog-width;
+    height: $thumbnail-modal-dialog-height;
+  }
+}
