--- a/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
@@ -1,28 +1,17 @@
 @import "../../template/_thumbnail.scss";
 
 // thumnbnail > modal(type: icon) 관련 템플릿
-.thumbnail-icon-modal-wrapper {
-  @include thumbnail-modal-wrapper();
-
-  .thumbnail-icon-modal-dialog {
-    @include thumbnail-modal-dialog();
-    border: 0.0625rem solid $line-gray;
-    border-radius: 0.0625rem;
-    width: $thumbnail-icon-modal-width;
-
-    .thumbnail-modal-body {
-      .thumbnail-container {
-        padding: $thumbnail-container-padding;
-        height: auto;
-        .thumbnail {
-          width: $thumbnail-icon-size;
-          height: $thumbnail-icon-size;
-          margin: $thumbnail-icon-margin;
-          div.thumbnail-img, div.thumbnail-icon {
-            height: $thumbnail-icon-div-size;
-            background-size: 100% !important
-          }
-        }
+.thumbnail-icon {
+  .thumbnail-container {
+    padding: $thumbnail-container-padding;
+    height: auto;
+    .thumbnail {
+      width: $thumbnail-icon-size;
+      height: $thumbnail-icon-size;
+      margin: $thumbnail-icon-margin;
+      div.thumbnail-img, div.thumbnail-icon {
+        height: $thumbnail-icon-div-size;
+        background-size: 100% !important
       }
     }
   }
