--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -12,6 +12,7 @@
     <link th:href="@{/assets/vendors/toastify/toastify.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/util/i18n-alice.js}"></script>
+    <script th:src="@{/assets/js/util/modal-alice.js}"></script>
     <script th:src="@{/assets/vendors/gModal/js/gModal.js}"></script>
     <script th:src="@{/assets/js/util/util-alice.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
