--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1676,71 +1676,50 @@ button .icon-plus {
   background-color: #0098FF;
 }
 
-.navigation-config .user-info-menu {
+.navigation-config .user-info {
   height: 3.125rem;
+  display: flex;
+  align-items: center;
+  padding: 0.6875rem 0 0.6875rem 1.3125rem;
 }
 
-.navigation-config .user-info-menu span {
+.navigation-config .user-info .user-name {
   color: #929AA6;
   font-weight: 500;
 }
 
-.navigation-config .user-info-menu a {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.navigation-config .user-info-menu a .user-profile {
+.navigation-config .user-info .user-profile {
   width: 1.688rem;
   height: 1.688rem;
   border-radius: 50%;
   display: inline-block;
   vertical-align: middle;
-  margin-right: 1rem;
-  margin-left: 1.25rem;
+  margin-right: 0.625rem;
 }
 
-.navigation-config .user-info-menu a .my-modify {
-  width: 15px;
-  height: 15px;
-  background: #929AA6;
-  -webkit-mask: url("../media/icons/icon_setting.svg") no-repeat center center;
-  mask-image: url("../media/icons/icon_setting.svg");
-  mask-repeat: no-repeat;
-  mask-position: center;
-  float: right;
-  margin-left: auto;
-  margin-right: 1.25rem;
-}
-
-.navigation-config .logout-menu {
+.navigation-config .logout {
   height: 3.125rem;
+  align-items: center;
+  padding: 0.6875rem 0 0.6875rem 1.3125rem;
 }
 
-.navigation-config .logout-menu span {
+.navigation-config .logout .btn-logout {
+  display: flex;
   color: #929AA6;
   font-weight: 500;
 }
 
-.navigation-config .logout-menu a {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.navigation-config .logout-menu a .my-logout {
-  width: 27px;
-  height: 27px;
-  background: #929AA6;
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_logout.svg") no-repeat center center;
+.navigation-config .logout .icon-logout {
+  margin-right: 0.875rem;
+  width: 1.6875rem;
+  height: 1.6875rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_logout.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_logout.svg");
+  -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
+  -webkit-mask-position: center;
   mask-position: center;
-  margin-left: 1.25rem;
-  margin-right: 1rem;
+  background: #929AA6;
 }
 
 .navigation-config > div:hover {
@@ -5448,9 +5427,9 @@ body.thumbnail-modal-active {
   left: calc(13.75rem + 0.3125rem);
   color: #3F4B56;
   background-color: #ffffff;
-  display: none;
   border: 0.0625rem solid #EBEBEB;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  display: none;
 }
 
 .notification-container.on {
@@ -5531,12 +5510,12 @@ body.thumbnail-modal-active {
 .notification-content .notification-checked input[type="checkbox"] {
   width: 1.125rem;
   height: 1.125rem;
-  -webkit-appearance: none;
   border: 0.063rem solid #0098FF;
-  padding: 0.313rem;
   border-radius: 0.063rem;
+  padding: 0.313rem;
   display: inline-block;
   position: relative;
+  -webkit-appearance: none;
   margin: 0;
   cursor: pointer;
 }
@@ -5584,6 +5563,7 @@ body.thumbnail-modal-active {
 }
 
 .notification-content span.title:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -5610,10 +5590,10 @@ body.thumbnail-modal-active {
 
 .alice-toastify {
   height: 6.25rem;
-  padding: 0 !important;
   background: #ffffff !important;
+  border-radius: 0.0625rem !important;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB !important;
-  border-radius: 0.063rem !important;
+  padding: 0 !important;
 }
 
 .alice-toastify.toastify-right {
