--- a/src/main/resources/public/src/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/src/scss/theme/default/_notification.scss
@@ -1,8 +1,17 @@
-// GNB notification
+// *********************************************************************************************************************
+// * notification
+//   - gnb 내부 요소로 종 모양 아이콘(.notification)에 hover시 노출되는 요소
+//     notification-container 내부에 크게 header와 body로 나뉘며,
+//     body 내부에 여러개의 contents로 구성된다.
+//
+// * alice-toastify
+//   - toastify를 커스텀하여 생성되며, 우측 하단에서 설정 값에 따라 n초 간 노출되는 요소
+// *********************************************************************************************************************
+
 .notification {
-  width: 100%;
-  height: 3.125rem; // 50px
-  padding: 0.6875rem 0 0.6875rem 1.3125rem; // 11px 0 11px 21px
+  width: $notification-icon-width;
+  height: $notification-icon-height;
+  padding: $notification-icon-padding;
   position: relative;
   display: inline-block;
   img, button {
@@ -16,20 +25,18 @@
     width: 26.25rem; // 420px
     bottom: 0;
     left: calc(#{$nav-width} + 0.3125rem); // 좌측 간격 5px
-    color: $light-black;
-    background-color: $white;
+    color: $notification-container-color;
+    background-color: $notification-container-background;
+    border: $notification-container-border;
+    box-shadow: $notification-container-box-shadow;
     display: none;
-    border: 0.0625rem solid $line-gray; // 1px
-    box-shadow: 0 0 0.3125rem 0 $line-gray; // 5px
-    &.on {
-    display: block;
-    }
+    &.on { display: block; }
   }
   &-header {
     height: 2.5rem; // 40px
     display: flex;
     align-items: baseline;
-    background-color: $point-blue;
+    background-color: $notification-header-background;
     padding: 0 0.938rem; // 0 15px
     span {
       display: inline-block;
@@ -60,7 +67,7 @@
     min-height: 6.875rem; // 110px
     max-height: 20.63rem; // 330px
     .nodata {
-    padding: 0.938rem; // 15px
+      padding: 0.938rem; // 15px
     }
   }
   &-content {
@@ -68,7 +75,7 @@
     padding: 0.938rem;// 15px
     border-bottom: 0.063rem solid $line-gray; // 1px
     &:hover {
-    background-color: rgba(135, 206, 255, 0.1);
+      background-color: rgba(135, 206, 255, 0.1);
     }
     .notification-checked {
       display: flex;
@@ -76,18 +83,18 @@
       background-color: $white;
       margin: 0;
       input[type="checkbox"] {
-        width: 1.125rem; // 18px
-        height: 1.125rem; // 18px
-        -webkit-appearance: none;
-        border: 0.063rem solid $point-blue; // 1px
+        width: $notification-checkbox-size;
+        height: $notification-checkbox-size;
+        border: $notification-checkbox-border-defualt;
+        border-radius: $notification-checkbox-border;
         padding: 0.313rem; // 5px
-        border-radius: 0.063rem; // 1px
         display: inline-block;
         position: relative;
+        -webkit-appearance: none;
         margin: 0;
         cursor: pointer;
         &:checked {
-          border: 0.063rem solid $line-gray; // 1px
+          border: $notification-checkbox-border-checked;
           color: $pressed-gray;
           cursor: unset;
         }
@@ -118,6 +125,7 @@
           opacity: 0.75;
         }
         &:hover {
+          cursor: pointer;
           text-decoration: underline;
         }
       }
@@ -143,59 +151,57 @@
   }
 }
 
-// 우측 하단 notification
 .alice-toastify {
-  height: 6.25rem; // 100px
+  height: $toastify-height;
+  background: $toastify-background;
+  border-radius: $toastify-border-radius !important;
+  box-shadow: $toastify-box-shadow;
   padding: 0 !important;
-  background: $white !important;
-  box-shadow: 0 0 0.3125rem 0 $line-gray !important;
-  border-radius: 0.063rem !important; // 1px
   &.toastify-right {
     right: 0.625rem; // 10px
   }
-  
   &.toast-content {
-      .icon {
-        float: left;
-        width: 6.25rem; // 100px
-        height: 6.25rem; // 100px
-        @include backgroundImageAndSize('#{$image-folder-path}notification/img_notification_logo.png', 6.25rem) // 100px
-      }
-      .content {
-        float: left;
-        width: 23.13rem; // 370px
-        height: 100%;
-        padding: 0.938rem; // 15px
-        border: 0.0625rem solid $line-gray !important; // 1px
-        div {
+    .icon {
+      float: left;
+      width: $toastify-icon-size;
+      height: $toastify-icon-size;
+      @include backgroundImageAndSize('#{$image-folder-path}notification/img_notification_logo.png', 6.25rem) // 100px
+    }
+    .content {
+      float: left;
+      width: 23.13rem; // 370px
+      height: 100%;
+      padding: 0.938rem; // 15px
+      border: $toastify-border;
+      div {
+        &.title {
+          padding-bottom: 0.625rem; // 10px
+          label, button { display: none; }
+        }
+        &.message {
+          padding-bottom: 0.625rem; // 10px
+        }
+        span {
           &.title {
-            padding-bottom: 0.625rem; // 10px
-            label, button { display: none; }
+            font-size: 1rem; // 16px
+            font-weight: $font-weight-medium;
+            color: $light-black;
+            max-width: 18.13rem; // 290px
           }
           &.message {
-            padding-bottom: 0.625rem; // 10px
+            font-size: 1rem; // 16px
+            font-weight: $font-weight-regular;
+            color: $dark-gray;
+            max-width: 22.5rem; // 360px
           }
-          span {
-            &.title {
-              font-size: 1rem; // 16px
-              font-weight: $font-weight-medium;
-              color: $light-black;
-              max-width: 18.13rem; // 290px
-            }
-            &.message {
-              font-size: 1rem; // 16px
-              font-weight: $font-weight-regular;
-              color: $dark-gray;
-              max-width: 22.5rem; // 360px
-            }
-            &.date {
-              font-size: 0.875rem; // 14px
-              font-weight: $font-weight-regular;
-              color: $gray;
-            }
+          &.date {
+            font-size: 0.875rem; // 14px
+            font-weight: $font-weight-regular;
+            color: $gray;
           }
         }
       }
+    }
   }
   .toast-close {
     position: absolute;
